# QBasic2

./: CMakeLists.txt  README.md  create.bat  main.cpp  resources.qrc  resources.rc  settings.h
classes/: editor.cpp  editor.h  evalstate.cpp  evalstate.h  exp.cpp  exp.h  parser.cpp  parser.h  statement.cpp  statement.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h
input/: 1.txt  2.txt  3.txt  4.txt  test1.txt  test2.txt  test4.txt
windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
